...
    <string name="emailConfirmTextBoxHint">confirm email</string>
    <string name="passwordResetButtonLabel">Change Password</string>
    <string name="passwordResetSendResetEmailButtonLabel">Send Reset Email</string>
    <string name="passwordResetEmailSent">A password reset email has been sent to your email if you have an account registered</string>
    <string name="passwordResetEmptyEmailError">Please enter an email first</string>
    <string name="registerEmptyEmailPasswordError">Please enter both an email and password.</string>
    <string name="registerFieldsMismatchError">Emails and/or passwords do not match.</string>
    <string name="registerInvalidEmailError">Entered email address is not valid.</string>
    <string name="registerPasswordLengthError">\"Password must be 6-24 characters \"</string>
    <string name="registerSuccessMessage">Registration Successfully, going back to login..</string>
    <string name="locationPermissionAllowed">"Location Permission Granted"</string>
    <string name="locationPermissionUnallowed">Please grant the location permission</string>
    <string name="search_prompt">Choose an option</string>
    <string name="confirm">confirm</string>
    <string name="title">title</string>
    <string name="itemName">Item name</string>
...
    <string name="EmptyItemListMessage">You have no items</string>

    <string name="HomePageTitle">Homepage</string>
    <string name="logout">Log out</string>
    <string name="back">Back</string>
    <string name="viewItemTitle">View Items</string>
    <string name="viewItemSearchHint">Search Name or Labels</string>
    <string name="CreateRequestTitle">Create New Request</string>

    <string name="Add">Add</string>
    <string name="Delete">Delete</string>
    <string name="Submit">Submit</string>
    <string name="NewRequestSubmissionError">Cannot submit without offering items</string>
    <string name="NewRequestSubmissionFailure">Your request fails to create, please try again</string>
    <string name="NewRequestSubmissionSuccessMessage">Your request has been created successful</string>
    <!-- BARTER ACTIVITY LABELS AND LAYOUT VALUE STUFF -->
    <string name="BarterActivity_ActivityTitle">Barter Activity</string>
    <string name="BarterActivity_SendRequestButtonLabel">send request</string>
    <string name="BarterActivity_ViewNextItemButtonLabel">Next Nearby item</string>

    <string name="BarterActivity_viewAllMyRequestButtonLabel">All</string>
    <string name="BarterActivity_ViewMyOwnRequestButtonLabel">Sent</string>
    <string name="BarterActivity_ViewReceivedRequestButtonLabel">Received</string>
...
