...
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewMySearchBtn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/buttonLogout"
        android:layout_width="85dp"
        android:layout_height="45dp"
        android:layout_marginStart="293dp"
        android:layout_marginLeft="293dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/HomepageActivityGoToBarterButton"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_marginTop="460dp"
        android:onClick="goToBarterActivity"
        android:text="Barter"
        app:layout_constraintEnd_toEndOf="parent"
...
